# zoom

./: .gitignore  DEEP_UNDERSTANDING.md  README.md  architecture.md  architecture_flow_diagrams.md  crm.txt  docker-compose.yml  prompt.md  render.yaml  zoom.txt
alok-zoom/backend/: .env.example  google_auth.py  main.py  pyproject.toml  test_event_bus.py
alok-zoom/backend/core/: config.py  database.py  utils.py
backend/: .env.example  .gitignore  Dockerfile  README.md  check_gcal_and_email.py  google_auth.py  main.py  pyproject.toml  sql_app.db  test_calendar_sync.py  test_gcal.py  test_late_mentor.py  test_retry.py  test_timezone_conflicts.py
backend/app/: main.py  models.py  settings.py  store.py  zoom_client.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py  repository.py
backend/app/models/: schemas.py
backend/app/services/: scheduler.py  zoom.py
backend/core/: base.py  config.py  database.py  events.py  security.py
backend/integrations/crm/: client.py  listeners.py
backend/integrations/email/: client.py  listeners.py
backend/integrations/google_calendar/: client.py  listeners.py  router.py
backend/integrations/google_sheets/: client.py  listeners.py
backend/integrations/zoom/: client.py  router.py
backend/modules/agent/: __init__.py  agent.py  listeners.py  router.py
backend/modules/ai/: router.py  service.py
backend/tests/: check_gcal_time.py  conftest.py  reproduce_tz.py  run_auth_tests.py  test_ai_prompt.py  test_ai_prompt2.py  test_duplicates.py  test_zoom_creds.py
(+99 files in other folders)
