[project]
name = "class-scheduler-backend"
version = "0.1.0"
description = "POC backend for class scheduling with Zoom integration"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-dateutil>=2.9",
  "tzdata>=2024.1",
]

[tool.uv]
package = false
